--- a/pages/styles/Home.module.css
+++ b/pages/styles/Home.module.css
@@ -1,16 +1,19 @@
 .contain {
     width: 100%;
-    min-height: 100vh;
     height: 100%;
+    min-height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    overflow-y: scroll;
+    padding: 30vh 0 0 0;
+    z-index: 1;
 }
 
 .inputCont {
+    margin: 50px 0;
     width: 60%;
-    height: 30px;
+    height: 40px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -19,4 +22,36 @@
 .logo {
     width: 200px;
     height: auto;
+}
+
+.linkIcon {
+    width: 70px;
+    height: auto;
+    margin: 0 0 20px 0;
+}
+
+.input {
+    width: 70%;
+    height: 100%;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0 1px 2px 2px rgb(230, 230, 230);
+    padding: 0 20px;
+    outline: none;
+    font-size: 100%;
+    color: gray;
+}
+
+.input::placeholder {
+    color: rgb(180, 180, 180);
+}
+
+.button {
+    border: none;
+    border-radius: 20px;
+    background-color: rgba(2, 181, 137, 1);
+    color: white;
+    cursor: pointer;
+    font-weight: 600;
+    width: 20%;
 }
