--- a/components/styles/Header.module.css
+++ b/components/styles/Header.module.css
@@ -15,6 +15,7 @@
     cursor: pointer;
     font-weight: 600;
     margin: 0 40px;
+    text-decoration: none;
 }
 
 .button {
@@ -27,4 +28,7 @@
     height: 40px;
     padding: 0 3%;
     margin: 0 3% 0 0;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
