--- a/pages/styles/Items.module.css
+++ b/pages/styles/Items.module.css
@@ -1,14 +1,29 @@
-.mainCont {
-    margin: 50px 0;
-    width: 60%;
-    height: fit-content;
+.contain {
+    width: 100%;
+    height: 100%;
+    min-height: 60vh;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: 30vh 0 0 0;
+    z-index: 1;
+}
+
+.logo {
+    width: 200px;
+    height: auto;
+}
+
+.linkIcon {
+    width: 70px;
+    height: auto;
+    margin: 0 0 20px 0;
 }
 
 .input {
-    width: 70%;
+    width: 100%;
     height: 40px;
     border: none;
     border-radius: 20px;
@@ -30,6 +45,5 @@
     color: white;
     cursor: pointer;
     font-weight: 600;
-    width: 20%;
-    height: 40px;
+    width: 100%;
 }
