--- a/App.css
+++ b/App.css
@@ -1,3 +1,24 @@
+/* unvisited link */
+a:link {
+  color: black;
+  text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+  color: black;
+}
+
+/* mouse over link */
+a:hover {
+  color: rgb(70, 70, 70);
+}
+
+/* selected link */
+a:active {
+  color: rgb(160, 160, 160);
+}
+
 .App {
   width: 100vw;
   display: flex;
