--- a/pages/styles/Home.module.css
+++ b/pages/styles/Home.module.css
@@ -1,10 +1,19 @@
 .mainCont {
-    margin: 50px 0;
     width: 60%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 20px;
+}
+
+.inputCont {
+    width: 100%;
     height: fit-content;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: 0 0 50px 0;
 }
 
 .input {
@@ -16,7 +25,7 @@
     padding: 0 20px;
     outline: none;
     font-size: 100%;
-    color: gray;
+    color: black;
 }
 
 .input::placeholder {
@@ -32,4 +41,51 @@
     font-weight: 600;
     width: 20%;
     height: 40px;
+}
+
+.linkCont {
+    width: 100%;
+    height: fit-content;
+    border-bottom: 1px rgb(216, 216, 216) solid;
+    padding: 20px 0;
+    display: flex;
+    flex-direction: row;
+}
+
+.urlCont {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.title {
+    color: gray;
+}
+
+.url {
+    margin: 0;
+    text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 1; /* number of lines to show */
+           line-clamp: 1; 
+   -webkit-box-orient: vertical;
+   cursor:default;
+}
+
+.url:active {
+   -webkit-box-orient:horizontal;
+}
+
+.shortCont {
+    display: flex;
+    flex-direction: row;
+}
+
+.copy {
+    color: rgba(2, 181, 137, 1);
+    font-weight: 500;
+    text-decoration: underline;
+    margin: 0 10%;
+    cursor: pointer;
 }
