--- a/components/styles/Footer.module.css
+++ b/components/styles/Footer.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     z-index: 3;
-    padding: 40px 0 0 0;
+    padding: 15vh 0 0 0;
 }
 
 .text {
