--- a/components/styles/Header.module.css
+++ b/components/styles/Header.module.css
@@ -18,6 +18,10 @@
     text-decoration: none;
 }
 
+.textButton:visited {
+    color: rgba(2, 181, 137, 1);
+}
+
 .button {
     border: none;
     border-radius: 20px;
@@ -31,4 +35,8 @@
     display: flex;
     align-items: center;
     text-decoration: none;
+}
+
+.button:visited {
+    color: white;
 }
