--- a/pages/styles/Home.module.css
+++ b/pages/styles/Home.module.css
@@ -1,5 +1,18 @@
+.contain {
+    width: 100%;
+    height: 100%;
+    min-height: 60vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: 20vh 0 0 0;
+    z-index: 1;
+}
+
 .mainCont {
-    width: 60%;
+    width: 50%;
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -13,7 +26,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 0 0 50px 0;
+    margin: 50px 0;
 }
 
 .input {
@@ -88,4 +101,10 @@
     text-decoration: underline;
     margin: 0 10%;
     cursor: pointer;
+}
+
+.tuuh {
+    color: rgba(2, 181, 137, 1);
+    font-size: 20px;
+    font-weight: 500;
 }
