--- a/pages/styles/Items.module.css
+++ b/pages/styles/Items.module.css
@@ -1,16 +1,3 @@
-.contain {
-    width: 100%;
-    height: 100%;
-    min-height: 60vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    padding: 30vh 0 0 0;
-    z-index: 1;
-}
-
 .logo {
     width: 200px;
     height: auto;
@@ -23,7 +10,7 @@
 }
 
 .input {
-    width: 100%;
+    width: auto;
     height: 40px;
     border: none;
     border-radius: 20px;
@@ -32,6 +19,7 @@
     outline: none;
     font-size: 100%;
     color: gray;
+    margin: 0 0 20px 0;
 }
 
 .input::placeholder {
@@ -46,4 +34,26 @@
     cursor: pointer;
     font-weight: 600;
     width: 100%;
+    height: 40px;
+    margin: 20px 0;
+}
+
+.title {
+    color: rgba(2, 181, 137, 1);
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.text {
+    color: black;
+    margin: 10px 20px;
+}
+
+.greenText {
+    color: rgba(2, 181, 137, 1);
+}
+
+.underLine {
+    text-decoration: underline;
+    cursor: pointer;
 }
