--- a/components/styles/Header.module.css
+++ b/components/styles/Header.module.css
@@ -26,7 +26,6 @@
     border: none;
     border-radius: 20px;
     background-color: rgba(2, 181, 137, 1);
-    color: white;
     cursor: pointer;
     font-weight: 600;
     height: 40px;
@@ -34,9 +33,16 @@
     margin: 0 3% 0 0;
     display: flex;
     align-items: center;
+    justify-content: center;
     text-decoration: none;
+    flex-direction: column;
 }
 
 .button:visited {
     color: white;
+}
+
+.text {
+    color: white;
+    margin: 0;
 }
